Run snapshot agent as a sidecar with consul servers (#1620)

--- a/charts/consul/templates/server-acl-init-job.yaml
+++ b/charts/consul/templates/server-acl-init-job.yaml
@@ -257,7 +257,7 @@ spec:
                 -create-enterprise-license-token=true \
                 {{- end }}
 
-                {{- if .Values.client.snapshotAgent.enabled }}
+                {{- if .Values.server.snapshotAgent.enabled }}
                 -snapshot-agent=true \
                 {{- end }}
 
