Add PodSecurityPolicy for Consul API Gateway controller (#1656)
* Add PodSecurityPolicy for Consul API Gateway controller

* Grant Consul API Gateway controller access to new PodSecurityPolicy

* Add unit test coverage for clusterrole + podsecuritypolicy

* Add changelog entry

* Use YQ@3 friendly select

--- a/charts/consul/templates/api-gateway-controller-clusterrole.yaml
+++ b/charts/consul/templates/api-gateway-controller-clusterrole.yaml
@@ -244,4 +244,12 @@ rules:
   - get
   - patch
   - update
+{{- if .Values.global.enablePodSecurityPolicies }}
+- apiGroups: ["policy"]
+  resources: ["podsecuritypolicies"]
+  resourceNames:
+    - {{ template "consul.fullname" . }}-api-gateway-controller
+  verbs:
+    - use
+{{- end }}
 {{- end }}
