--- a/charts/consul/templates/sync-catalog-deployment.yaml
+++ b/charts/consul/templates/sync-catalog-deployment.yaml
@@ -1,4 +1,3 @@
-{{- $clientEnabled := (or (and (ne (.Values.client.enabled | toString) "-") .Values.client.enabled) (and (eq (.Values.client.enabled | toString) "-") .Values.global.enabled)) }}
 {{- if (or (and (ne (.Values.syncCatalog.enabled | toString) "-") .Values.syncCatalog.enabled) (and (eq (.Values.syncCatalog.enabled | toString) "-") .Values.global.enabled)) }}
 {{- template "consul.reservedNamesFailer" (list .Values.syncCatalog.consulNamespaces.consulDestinationNamespace "syncCatalog.consulNamespaces.consulDestinationNamespace") }}
 {{ template "consul.validateRequiredCloudSecretsExist" . }}
@@ -55,9 +54,6 @@ spec:
     spec:
       serviceAccountName: {{ template "consul.fullname" . }}-sync-catalog
       volumes:
-      - name: consul-data
-        emptyDir:
-          medium: "Memory"
       {{- if .Values.global.tls.enabled }}
       {{- if not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) }}
       - name: consul-ca-cert
@@ -71,24 +67,28 @@ spec:
           - key: {{ default "tls.crt" .Values.global.tls.caCert.secretKey }}
             path: tls.crt
       {{- end }}
-      {{- if (and .Values.global.tls.enableAutoEncrypt $clientEnabled) }}
-      - name: consul-auto-encrypt-ca-cert
-        emptyDir:
-          medium: "Memory"
-      {{- end }}
       {{- end }}
       containers:
         - name: sync-catalog
           image: "{{ default .Values.global.imageK8S .Values.syncCatalog.image }}"
           env:
+            {{- include "consul.consulK8sConsulServerEnvVars" . | nindent 12 }}
             {{- if .Values.global.acls.manageSystemACLs }}
-            - name: CONSUL_HTTP_TOKEN_FILE
-              value: "/consul/login/acl-token"
+            - name: CONSUL_LOGIN_AUTH_METHOD
+              {{- if and .Values.global.federation.enabled .Values.global.federation.primaryDatacenter .Values.global.enableConsulNamespaces }}
+              value: {{ template "consul.fullname" . }}-k8s-component-auth-method-{{ .Values.global.datacenter }}
+              {{- else }}
+              value: {{ template "consul.fullname" . }}-k8s-component-auth-method
+              {{- end }}
+            - name: CONSUL_LOGIN_DATACENTER
+              {{- if and .Values.global.federation.enabled .Values.global.federation.primaryDatacenter .Values.global.enableConsulNamespaces }}
+              value: {{ .Values.global.federation.primaryDatacenter }}
+              {{- else }}
+              value: {{ .Values.global.datacenter }}
+              {{- end }}
+            - name: CONSUL_LOGIN_META
+              value: "component=sync-catalog,pod=$(NAMESPACE)/$(POD_NAME)"
             {{- end }}
-            - name: HOST_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.hostIP
             - name: NAMESPACE
               valueFrom:
                 fieldRef:
@@ -100,35 +100,9 @@ spec:
                   name: {{ .Values.syncCatalog.aclSyncToken.secretName }}
                   key: {{ .Values.syncCatalog.aclSyncToken.secretKey }}
             {{- end }}
-            {{- if .Values.global.tls.enabled }}
-            {{- if .Values.client.enabled }}
-            - name: CONSUL_HTTP_ADDR
-              value: https://$(HOST_IP):8501
-            {{- else }}
-            - name: CONSUL_HTTP_ADDR
-              value: https://{{ template "consul.fullname" . }}-server:8501
-            {{- end }}
-            - name: CONSUL_CACERT
-              value: /consul/tls/ca/tls.crt
-            {{- else }}
-            {{- if .Values.client.enabled }}
-            - name: CONSUL_HTTP_ADDR
-              value: http://$(HOST_IP):8500
-            {{- else }}
-            - name: CONSUL_HTTP_ADDR
-              value: http://{{ template "consul.fullname" . }}-server:8500
-            {{- end }}
-            {{- end }}
           volumeMounts:
-            - mountPath: /consul/login
-              name: consul-data
-              readOnly: true
             {{- if .Values.global.tls.enabled }}
-            {{- if and .Values.global.tls.enableAutoEncrypt $clientEnabled }}
-            - name: consul-auto-encrypt-ca-cert
-            {{- else }}
             - name: consul-ca-cert
-            {{- end }}
               mountPath: /consul/tls/ca
               readOnly: true
             {{- end }}
@@ -137,7 +111,6 @@ spec:
             - "-ec"
             - |
               consul-k8s-control-plane sync-catalog \
-                -consul-api-timeout={{ .Values.global.consulAPITimeout }} \
                 -log-level={{ default .Values.global.logLevel .Values.syncCatalog.logLevel }} \
                 -log-json={{ .Values.global.logJSON }} \
                 -k8s-default-sync={{ .Values.syncCatalog.default }} \
@@ -200,16 +173,6 @@ spec:
                 -consul-cross-namespace-acl-policy=cross-namespace-policy \
                 {{- end }}
                 {{- end }}
-          {{- if .Values.global.acls.manageSystemACLs }}
-          lifecycle:
-            preStop:
-              exec:
-                command:
-                - "/bin/sh"
-                - "-ec"
-                - |
-                  consul-k8s-control-plane consul-logout -consul-api-timeout={{ .Values.global.consulAPITimeout }}
-          {{- end }}
           livenessProbe:
             httpGet:
               path: /health/ready
@@ -234,69 +197,6 @@ spec:
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-      {{- if or .Values.global.acls.manageSystemACLs (and .Values.global.tls.enabled .Values.global.tls.enableAutoEncrypt $clientEnabled) }}
-      initContainers:
-      {{- if (and .Values.global.tls.enabled .Values.global.tls.enableAutoEncrypt $clientEnabled) }}
-      {{- include "consul.getAutoEncryptClientCA" . | nindent 6 }}
-      {{- end }}
-      {{- if .Values.global.acls.manageSystemACLs }}
-      - name: sync-catalog-acl-init
-        env:
-        - name: HOST_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.hostIP
-          {{- if .Values.global.tls.enabled }}
-        - name: CONSUL_CACERT
-          value: /consul/tls/ca/tls.crt
-          {{- end }}
-        - name: CONSUL_HTTP_ADDR
-            {{- if .Values.global.tls.enabled }}
-          value: https://$(HOST_IP):8501
-            {{- else }}
-          value: http://$(HOST_IP):8500
-            {{- end }}
-        image: {{ .Values.global.imageK8S }}
-        volumeMounts:
-        - mountPath: /consul/login
-          name: consul-data
-          readOnly: false
-        {{- if .Values.global.tls.enabled }}
-        {{- if .Values.global.tls.enableAutoEncrypt }}
-        - name: consul-auto-encrypt-ca-cert
-        {{- else }}
-        - name: consul-ca-cert
-        {{- end }}
-          mountPath: /consul/tls/ca
-          readOnly: true
-        {{- end }}
-        command:
-          - "/bin/sh"
-          - "-ec"
-          - |
-            consul-k8s-control-plane acl-init \
-              -component-name=sync-catalog \
-              {{- if and .Values.global.federation.enabled .Values.global.federation.primaryDatacenter .Values.global.enableConsulNamespaces }}
-              -acl-auth-method={{ template "consul.fullname" . }}-k8s-component-auth-method-{{ .Values.global.datacenter }} \
-              -primary-datacenter={{ .Values.global.federation.primaryDatacenter }} \
-              {{- else }}
-              -acl-auth-method={{ template "consul.fullname" . }}-k8s-component-auth-method \
-              {{- end }}
-              {{- if .Values.global.adminPartitions.enabled }}
-              -partition={{ .Values.global.adminPartitions.name }} \
-              {{- end }}
-              -consul-api-timeout={{ .Values.global.consulAPITimeout }} \
-              -log-level={{ default .Values.global.logLevel .Values.syncCatalog.logLevel }} \
-              -log-json={{ .Values.global.logJSON }}
-        resources:
-          requests:
-            memory: "25Mi"
-            cpu: "50m"
-          limits:
-            memory: "25Mi"
-            cpu: "50m"
-      {{- end }}
-      {{- end }}
       {{- if .Values.syncCatalog.priorityClassName }}
       priorityClassName: {{ .Values.syncCatalog.priorityClassName | quote }}
       {{- end }}
