api-gateway: allow controller to bind PodSecurityPolicy to ServiceAccounts that it creates (#1672)
* Add PodSecurityPolicy for all Gateway Deployments

* Allow API gateway controller to manage roles + bindings

* Add entry to CHANGELOG

* Consolidate controller ClusterRole mods for enablePodSecurityPolicies

* Update/add unit test coverage for controller ClusterRole

* Check for additional verbs on cluster role

--- a/charts/consul/templates/api-gateway-controller-clusterrole.yaml
+++ b/charts/consul/templates/api-gateway-controller-clusterrole.yaml
@@ -245,11 +245,21 @@ rules:
   - patch
   - update
 {{- if .Values.global.enablePodSecurityPolicies }}
-- apiGroups: ["policy"]
-  resources: ["podsecuritypolicies"]
-  resourceNames:
-    - {{ template "consul.fullname" . }}-api-gateway-controller
+- apiGroups:
+  - policy
+  resources:
+  - podsecuritypolicies
   verbs:
-    - use
+  - use
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - roles
+  - rolebindings
+  verbs:
+  - create
+  - get
+  - list
+  - watch
 {{- end }}
 {{- end }}
