--- a/control-plane/config/crd/bases/consul.hashicorp.com_servicedefaults.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_servicedefaults.yaml
@@ -106,6 +106,17 @@ spec:
                   TLS SNI value to be changed to a non-connect value when federating
                   with an external system.
                 type: string
+              localConnectTimeoutMs:
+                description: The number of milliseconds allowed to make connections
+                  to the local application instance before timing out. Defaults to
+                  5000.
+                type: integer
+              localRequestTimeoutMs:
+                description: In milliseconds, the timeout for HTTP requests to the
+                  local application instance. Applies to HTTP-based protocols only.
+                  If not specified, inherits the Envoy default for route timeouts
+                  (15s).
+                type: integer
               maxInboundConnections:
                 description: MaxInboundConnections is the maximum number of concurrent
                   inbound connections to each service instance. Defaults to 0 (using
