--- a/charts/demo/templates/frontend.yaml
+++ b/charts/demo/templates/frontend.yaml
@@ -1,11 +1,3 @@
-# WARNING: The HashiCups files have been copied directly from
-# https://github.com/hashicorp/learn-consul-kubernetes/tree/main/layer7-observability/hashicups
-# Any modifications begin with the comment # BEGIN CONSUL-K8S MODIFICATION
-# and end with the comment # BEGIN CONSUL-K8S MODIFICATION.
-# If keeping these files manually up to date with their upstream source,
-# the files will need to be copied from the above repo and transferred here.
-# Once transferred, all modifications will need to be reapplied.
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -15,8 +7,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 3000
+      targetPort: 3000
   selector:
     app: frontend
 ---
@@ -33,39 +25,6 @@ metadata:
 spec:
   protocol: "http"
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: nginx-configmap
-data:
-  config: |
-    # /etc/nginx/conf.d/default.conf
-    server {
-        listen       80;
-        server_name  localhost;
-        #charset koi8-r;
-        #access_log  /var/log/nginx/host.access.log  main;
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-        }
-        # Proxy pass the api location to save CORS
-        # Use location exposed by Consul connect
-        location /api {
-            # BEGIN CONSUL-K8S MODIFICATION
-            proxy_pass http://public-api.{{ .Release.Namespace }}.svc.cluster.local:8080;
-            # END CONSUL-K8S MODIFICATION
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host $host;
-        }
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-    }
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -81,36 +40,22 @@ spec:
       labels:
         service: frontend
         app: frontend
-      # BEGIN CONSUL-K8S MODIFICATION
       annotations:
-        'consul.hashicorp.com/connect-inject': 'true'
-      # END CONSUL-K8S MODIFICATION
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9102"
+        consul.hashicorp.com/connect-inject: "true"
     spec:
       serviceAccountName: frontend
-      volumes:
-      - name: config
-        configMap:
-          name: nginx-configmap
-          items:
-          - key: config
-            path: default.conf
       containers:
         - name: frontend
-          image: hashicorpdemoapp/frontend:v0.0.3
+          image: hashicorpdemoapp/frontend:v1.0.3
+          imagePullPolicy: Always
+          env:
+            - name: NEXT_PUBLIC_PUBLIC_API_URL
+              value: "/"
           ports:
-            - containerPort: 80
-          volumeMounts:
-            - name: config
-              mountPath: /etc/nginx/conf.d
-              readOnly: true
----
-apiVersion: consul.hashicorp.com/v1alpha1
-kind: ServiceIntentions
-metadata:
-  name: frontend-to-public-api
-spec:
-  destination:
-    name: public-api
-  sources:
-    - name: frontend
-      action: allow
+            - containerPort: 3000
+          # Added for debugging purposes - NOT RECOMMENDED
+          # securityContext:
+          #   allowPrivilegeEscalation: false
+          #   runAsUser: 0
