Add externalServers.skipServerWatch to helm for working with load balancers (#1686)
-  Add helm value of externalServers.skipServerWatch
- Add the environment variable CONSUL_SKIP_SERVER_WATCH to helm _helpers.tpl so that the environment variable will get automatically picked up by connection manager when talking to consul servers
 - Even though not directly needed there, add the check that externalServers.enabled is also set when externalServers.skipServerWatch=true in connect-inject-deployment.yaml
 - Bats tests for connect-inject-deployment to make sure that it fails the condition above and that the CONSUL_SKIP_SERVER_WATCH is set in the environment.
 - Read the env variable in flags/consul.go so that it can be passed to connection manager and down into discover.Config (used by partition-init, catalog-sync, server-acl-init, inject-connect, etc)
 - Specifically, set the flag in the webhook so that it is passed onto consul-dataplane as a -server-watch-disabled=true flag

--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -1183,6 +1183,10 @@ externalServers:
   # @type: string
   k8sAuthMethodHost: null
 
+  # If true, setting this prevents the consul-dataplane and consul-k8s components from watching the Consul servers for changes. This is
+  # useful for situations where Consul servers are behind a load balancer. 
+  skipServerWatch: false
+
 # Values that configure running a Consul client on Kubernetes nodes.
 client:
   # If true, the chart will install all
