--- a/charts/consul/templates/terminating-gateways-deployment.yaml
+++ b/charts/consul/templates/terminating-gateways-deployment.yaml
@@ -285,6 +285,9 @@ spec:
                 {{- if (and $root.Values.global.metrics.enabled $root.Values.global.metrics.enableGatewayMetrics) }}
                 -telemetry-prom-scrape-path="/metrics"
                 {{- end }}
+                {{- if and $root.Values.externalServers.enabled $root.Values.externalServers.skipServerWatch }}
+                -server-watch-disabled=true
+                {{- end }}
           livenessProbe:
             tcpSocket:
               port: 8443
